tests/compilefail05.out
[1mtests/compilefail05.pas:9:10: [0m[1m[91merror:[0m Variable access followed by '=', was assignment intended?
     9 | 		i=i-1;